--- a/Front-End/arik_portfolio_template/index.html
+++ b/Front-End/arik_portfolio_template/index.html
@@ -30,7 +30,7 @@
 
       <!-- Marquee Animation  -->
       <section class="marquee-section">
-        <div class="logos">
+        <div class="marquee">
           <div class="text">
             <p>NeuraTech</p>
             <p>ByteForge</p>
@@ -47,6 +47,8 @@
           </div>
         </div>
       </section>
+
+      <!--  -->
     </main>
     <!--  -->
   </body>
