Finish my services and selected works sections

--- a/Front-End/arik_portfolio_template/index.html
+++ b/Front-End/arik_portfolio_template/index.html
@@ -24,7 +24,7 @@
 
       <!-- My Services Tag -->
       <div class="services-tag">
-        <img src="assets/down-arrow.svg" alt="down-arrow" />
+        <img src="assets/arrow.svg" alt="down-arrow" class="arrow" />
         <p>My Services</p>
       </div>
 
@@ -48,7 +48,87 @@
         </div>
       </section>
 
-      <!--  -->
+      <!-- Services -->
+      <section class="services-section">
+        <div class="service-card web-design">
+          <p class="count">01</p>
+          <h2 class="service-label">Web Design</h2>
+          <p>
+            Visually stunning web designs that captivate your audience by
+            blending your brand voice and customer needs.
+          </p>
+          <a href=""
+            ><img src="assets/arrow.svg" alt="arrow" class="arrow" /> About Web
+            Design</a
+          >
+        </div>
+        <!--  -->
+        <div class="service-card web-development">
+          <p class="count">02</p>
+          <h2 class="service-label">Development</h2>
+          <p>
+            Get custom web development solutions that are tailored to your
+            specifications, designed to deliver a flawless user experience.
+          </p>
+          <a href=""
+            ><img src="assets/arrow.svg" alt="arrow" class="arrow" /> About
+            Development</a
+          >
+        </div>
+        <!--  -->
+        <div class="service-card Content-&-Seo">
+          <p class="count">03</p>
+          <h2 class="service-label">Content & Seo</h2>
+          <p>
+            Proven SEO strategies that enhance your online performance, bringing
+            you to the forefront of organic search results.
+          </p>
+          <a href=""
+            ><img src="assets/arrow.svg" alt="arrow" class="arrow" /> About
+            SEO</a
+          >
+        </div>
+      </section>
+
+      <!-- Works -->
+      <section class="works-section">
+        <div class="heading">
+          <h2>Selected Work</h2>
+          <a href=""
+            ><img src="assets/arrow.svg" alt="arrow" class="arrow" /> SEE ALL</a
+          >
+        </div>
+
+        <div class="work-items">
+          <div class="work-item space">
+            <div class="work-info">
+              <p class="name">Space</p>
+              <div class="category">WEB DESIGN</div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="work-item nova">
+            <div class="work-info">
+              <p class="name">Nova</p>
+              <div class="category">WEB DESIGN</div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="work-item sonic">
+            <div class="work-info">
+              <p class="name">Sonic</p>
+              <div class="category">WEB DESIGN</div>
+            </div>
+          </div>
+          <!--  -->
+          <div class="work-item solar">
+            <div class="work-info">
+              <p class="name">Solar</p>
+              <div class="category">WEB DESIGN</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--  -->
   </body>
