Finish template, but process section is not complete

--- a/Front-End/arik_portfolio_template/index.html
+++ b/Front-End/arik_portfolio_template/index.html
@@ -129,7 +129,129 @@
           </div>
         </div>
       </section>
+
+      <!-- The Process  -->
+      <section class="process-section">
+        <div class="process-heading">
+          <h4>The Process</h4>
+          <h3>
+            Your Website <br />
+            <i>in 5 steps</i>
+          </h3>
+          <p>
+            Our process ensures that we create a website <br />tailored to your
+            business needs.
+          </p>
+        </div>
+      </section>
+
+      <!-- Testimonial Section -->
+      <section class="testimonial-section">
+        <div class="heading">
+          <h3>
+            What my <br />
+            <i>clients say</i>
+          </h3>
+          <p>
+            See what my clients have to say about working with me and <br />the
+            results I helped them achieve.
+          </p>
+        </div>
+
+        <div class="testimonial-items">
+          <div class="testimonial-card">
+            <div class="logo">Logo</div>
+            <h2 class="label">
+              Amazing Results with Arik's Premium Web Design Services.
+            </h2>
+            <p class="description">
+              Arik is a top-notch web designer who created a stunning website
+              for my business. He was attentive to my needs and provided
+              excellent customer service throughout the entire process. I highly
+              recommend his services.
+            </p>
+            <div class="intru">
+              <img src="assets/sonic.png" alt="img" />
+              <h4 class="name">
+                Matthew Smith <br /><span class="company">Sonic</span>
+              </h4>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="logo">Logo</div>
+            <h2 class="label">
+              Expert Framer and SEO Services: Excellent Work, Great Results.
+            </h2>
+            <p class="description">
+              Working with Arik on my website redesign was a fantastic
+              experience. He was able to take my vision and turn it into a
+              beautiful and functional website. His attention to detail and
+              creative approach is unmatched. I couldn't be happier with the end
+              result.
+            </p>
+            <div class="intru">
+              <img src="assets/sonic.png" alt="img" />
+              <h4 class="name">
+                Josh Kim <br /><span class="company">Solar</span>
+              </h4>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="logo">Logo</div>
+            <h2 class="label">
+              Amazing Results with Arik's Premium Web Design Services.
+            </h2>
+            <p class="description">
+              Arik is a top-notch web designer who created a stunning website
+              for my business. He was attentive to my needs and provided
+              excellent customer service throughout the entire process. I highly
+              recommend his services.
+            </p>
+            <div class="intru">
+              <img src="assets/sonic.png" alt="img" />
+              <h4 class="name">
+                Matthew Smith <br /><span class="company">Sonic</span>
+              </h4>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <div class="logo">Logo</div>
+            <h2 class="label">
+              Expert Framer and SEO Services: Excellent Work, Great Results.
+            </h2>
+            <p class="description">
+              Working with Arik on my website redesign was a fantastic
+              experience. He was able to take my vision and turn it into a
+              beautiful and functional website. His attention to detail and
+              creative approach is unmatched. I couldn't be happier with the end
+              result.
+            </p>
+            <div class="intru">
+              <img src="assets/sonic.png" alt="img" />
+              <h4 class="name">
+                Josh Kim <br /><span class="company">Solar</span>
+              </h4>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--  -->
+
+    <footer>
+      <h4>Project in mind?</h4>
+      <h2>
+        Let’s make your
+        <br />
+        <i> Website shine </i>
+      </h2>
+      <p>
+        Premium web design, development, and SEO <br />
+        services to help your business stand out.
+      </p>
+      <button>Get in Touch</button>
+
+      <p class="copy-rights">&copy; 2025 ALL Right Reserved</p>
+    </footer>
   </body>
 </html>
