Finish this exercise

--- a/Front-End/arik_portfolio_template/index.html
+++ b/Front-End/arik_portfolio_template/index.html
@@ -143,6 +143,131 @@
             business needs.
           </p>
         </div>
+
+        <div class="process-items">
+          <div class="lines">
+            <img src="assets/arrow.svg" alt="arrow" class="arrow" />
+            <div class="sm-line"></div>
+            <div class="count">01</div>
+            <div class="lg-line"></div>
+            <div class="count">02</div>
+            <div class="lg-line"></div>
+            <div class="count">03</div>
+            <div class="lg-line"></div>
+           
+
+          </div>
+
+          <div class="process-card-item left">
+            <div class="process-card lg-hide">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+            <!--  -->
+
+            <div class="process-card">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+            <!--  -->
+
+            <div class="process-card lg-hide">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- -->
+
+          <div class="process-card-item right">
+            <div class="process-card">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+            <!--  -->
+
+            <div class="process-card lg-hide">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+            <div class="process-card">
+              <p class="time">02 Hours</p>
+              <h4>Do We Match?</h4>
+              <h2>Discovery Call</h2>
+              <p>
+                Before we start, we determine if and how I can help you. What
+                are your requirements for your new website? Why do you need a
+                new website? What goals do you have, and what problems can we
+                solve with a new website?
+              </p>
+              <ul>
+                <li>We get to know each other better</li>
+                <li>Determine how i can best assist you</li>
+                <li>Understand the goals you have for your website</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Testimonial Section -->
