Finish our-team section

--- a/Front-End/fylla-template/index.html
+++ b/Front-End/fylla-template/index.html
@@ -15,7 +15,7 @@
           that inspires
         </h1>
         <img
-          src="https://images.unsplash.com/photo-1741540420711-a8b8b83acfba?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          src="https://images.unsplash.com/photo-1549116259-a400a614c455?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="hero-img"
         />
       </section>
@@ -31,7 +31,7 @@
         <div class="line"></div>
         <div class="bottom-container">
           <div class="element">
-            <img src="assets/triangle.svg" alt="icon">
+            <img src="assets/triangle.svg" alt="icon" />
             <h3>VISION</h3>
             <p>
               Our relentless pursuit of a shared vision fuels our creativity and
@@ -43,7 +43,7 @@
           </div>
           <div class="line"></div>
           <div class="element">
-            <img src="assets/triangle.svg" alt="icon">
+            <img src="assets/triangle.svg" alt="icon" />
             <h3>Innovation</h3>
             <p>
               Innovation is at the core of everything we do. We embrace
@@ -53,7 +53,7 @@
           </div>
           <div class="line"></div>
           <div class="element">
-            <img src="assets/triangle.svg" alt="icon">
+            <img src="assets/triangle.svg" alt="icon" />
             <h3>Connection</h3>
             <p>
               We believe in the power of connection. We strive to build bridges
@@ -63,6 +63,59 @@
           </div>
         </div>
       </section>
+      <div class="bottom-line"></div>
+
+      <section class="our-team">
+        <div class="top-container">
+          <div class="text">
+            <h3>
+              Our <br />
+              Team
+            </h3>
+            <p>Meet our talented team of creative minds driving innovation</p>
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="bottom-container">
+          <div class="top-container-team">
+            <div class="team-member">
+              <img
+                src="https://images.unsplash.com/photo-1538898780761-268f71f67675?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <h4>Jacob Jones</h4>
+              <p>CEO</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="https://images.unsplash.com/photo-1538898780761-268f71f67675?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <h4>Jacob Jones</h4>
+              <p>CEO</p>
+            </div>
+          </div>
+          <div class="bottom-container-team">
+            <div class="team-member">
+              <img
+                src="https://images.unsplash.com/photo-1538898780761-268f71f67675?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <h4>Jacob Jones</h4>
+              <p>CEO</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="https://images.unsplash.com/photo-1538898780761-268f71f67675?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <h4>Jacob Jones</h4>
+              <p>CEO</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="bottom-line"></div>
     </main>
   </body>
 </html>
