Finish contact layout

--- a/Front-End/fylla-template/index.html
+++ b/Front-End/fylla-template/index.html
@@ -116,6 +116,27 @@
         </div>
       </section>
       <div class="bottom-line"></div>
+
+      <section class="contact">
+        <div class="top-container">
+          <img src="assets/triangle.svg" alt="icon" />
+          <div class="text">
+            <p>CONTACT</p>
+            <h2>Let’s bring your brand to the next level</h2>
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="bottom-container">
+          <div class="element">
+            <p>
+              Together, let's elevate your brand to new heights by unleashing
+              its full potential and captivating your target audience.
+            </p>
+            <button>GET IN TOUCH</button>
+          </div>
+        </div>
+      </section>
+      <div class="bottom-line"></div>
     </main>
   </body>
 </html>
