Finish footer layout

--- a/Front-End/fylla-template/index.html
+++ b/Front-End/fylla-template/index.html
@@ -137,6 +137,53 @@
         </div>
       </section>
       <div class="bottom-line"></div>
+
+      <section class="footer">
+        <div class="top-container">
+          <h3>FYLLA</h3>
+          <p>
+            Main Street. 1 <br />
+            222222 Berlin
+          </p>
+        </div>
+        <div class="line"></div>
+        <div class="bottom-container">
+          <div class="pages">
+            <h3>Pages</h3>
+            <div class="nav-items">
+              <p>Home</p>
+              <p>Services</p>
+              <p>Studio</p>
+              <p>Contact</p>
+              <button>MORE TEMPLATES</button>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="cms">
+            <h3>CMS</h3>
+            <div class="nav-items">
+              <p>Work</p>
+              <p>Work Single</p>
+              <p>Blog</p>
+              <p>Blog Single</p>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="utility-pages">
+            <h3>Pages</h3>
+            <div class="nav-items">
+              <p>404 Error Page</p>
+              <p>Styleguide</p>
+              <p>Licensing</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="bottom-line"></div>
+      <section class="copy-right">
+        <p>Cloned by ALI ZAIN ASLAM</p>
+        <p>PRIVACY & POLICY</p>
+      </section>
     </main>
   </body>
 </html>
