Finish top destination section

--- a/Front-End/interactive-responsive-project/index.html
+++ b/Front-End/interactive-responsive-project/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main>
+      <!-- Hero Section -->
       <section class="hero-section">
         <div class="top-section">
           <h1>Discover the World's <span>Hidden</span> Wonders</h1>
@@ -16,7 +17,7 @@
             Exercitationem ex ducimus eveniet laboriosam odit aliquid odio ea
             iure nobis ab vitae quo minima, voluptas culpa doloribus?
           </p>
-          <button>GET STARTED</button>
+          <button>PLAN YOUR TRIP</button>
         </div>
         <div class="bottom-section">
           <img
@@ -34,6 +35,91 @@
             src="https://images.unsplash.com/photo-1569173112611-52a7cd38bea9?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt=""
           />
+        </div>
+      </section>
+
+      <!-- Destination -->
+      <section class="top-destination">
+        <div class="top-section">
+          <h2>Top Destination</h2>
+          <div class="places">
+            <p>UAE</p>
+            <p>Milan</p>
+            <p>Paris</p>
+            <p>Birlan</p>
+            <p>Lahore</p>
+            <p>Delhi</p>
+            <p>Milan</p>
+            <p>Paris</p>
+            <p>Birlan</p>
+            <p>Lahore</p>
+            <p>Delhi</p>
+            <button>Popular <span>&darr;</span></button>
+          </div>
+        </div>
+        <div class="bottom-section">
+          <div class="image-cards">
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+            <div class="cards">
+              <img
+                src="https://images.unsplash.com/photo-1518684079-3c830dcef090?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h3>Lorem ipsum dolor</h3>
+                <p>UAE</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
