Finish latest stories section

--- a/Front-End/interactive-responsive-project/index.html
+++ b/Front-End/interactive-responsive-project/index.html
@@ -122,6 +122,106 @@
           </div>
         </div>
       </section>
+
+      <!-- Latest Stories -->
+      <section class="latest-story">
+        <div class="top-section">
+          <h2>Latest Stories</h2>
+          <button>Explore More</button>
+        </div>
+        <div class="bottom-section">
+          <div class="top-story">
+            <img
+              src="https://images.unsplash.com/photo-1549944850-84e00be4203b?q=80&w=1968&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+            <div class="content">
+              <p>Lorem ipsum</p>
+              <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+              <p>lorem ipsum ipsum</p>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                nulla cumque atque totam voluptatum fugiat eius obcaecati, sunt
+                debitis beatae voluptatem officia impedit doloribus recusandae
+                earum eum nam libero natus?
+              </p>
+            </div>
+          </div>
+          <div class="bottom-stories">
+            <div class="story-card">
+              <img
+                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
+                alt=""
+              />
+              <div class="text">
+                <p>Lorem</p>
+                <h4>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+                  officia nisi
+                </h4>
+                <p>Lorem ipsum ipsumipsum ipsum</p>
+              </div>
+            </div>
+            <div class="story-card">
+              <img
+                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
+                alt=""
+              />
+              <div class="text">
+                <p>Lorem</p>
+                <h4>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+                  officia nisi
+                </h4>
+                <p>Lorem ipsum ipsumipsum ipsum</p>
+              </div>
+            </div>
+            <div class="story-card">
+              <img
+                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
+                alt=""
+              />
+              <div class="text">
+                <p>Lorem</p>
+                <h4>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+                  officia nisi
+                </h4>
+                <p>Lorem ipsum ipsumipsum ipsum</p>
+              </div>
+            </div>
+            <div class="story-card">
+              <img
+                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
+                alt=""
+              />
+              <div class="text">
+                <p>Lorem</p>
+                <h4>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+                  officia nisi
+                </h4>
+                <p>Lorem ipsum ipsumipsum ipsum</p>
+              </div>
+            </div>
+            <div class="story-card">
+              <img
+                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
+                alt=""
+              />
+              <div class="text">
+                <p>Lorem</p>
+                <h4>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
+                  officia nisi
+                </h4>
+                <p>Lorem ipsum ipsumipsum ipsum</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button>Explore More</button>
+      </section>
     </main>
   </body>
 </html>
