--- a/Front-End/interactive-responsive-project/index.html
+++ b/Front-End/interactive-responsive-project/index.html
@@ -190,37 +190,59 @@
                 <p>Lorem ipsum ipsumipsum ipsum</p>
               </div>
             </div>
-            <div class="story-card">
-              <img
-                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
-                alt=""
-              />
-              <div class="text">
-                <p>Lorem</p>
-                <h4>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
-                  officia nisi
-                </h4>
-                <p>Lorem ipsum ipsumipsum ipsum</p>
-              </div>
-            </div>
-            <div class="story-card">
-              <img
-                src="https://images.unsplash.com/photo-1554203576-7ddd40749aa4?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHVhZSUyMG1vdW5hdGlufGVufDB8fDB8fHww"
-                alt=""
-              />
-              <div class="text">
-                <p>Lorem</p>
-                <h4>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit
-                  officia nisi
-                </h4>
-                <p>Lorem ipsum ipsumipsum ipsum</p>
-              </div>
-            </div>
           </div>
         </div>
         <button>Explore More</button>
+      </section>
+
+      <!-- Trekker's Highlights -->
+      <section class="t-highlights">
+        <h2>Trekker's Highlights</h2>
+        <div class="content">
+          <div class="top-section">
+            <div class="user-info">
+              <img
+                src="https://images.unsplash.com/photo-1481437642641-2f0ae875f836?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjZ8fG1hbnxlbnwwfHwwfHx8MA%3D%3D"
+                alt=""
+              />
+              <div class="text">
+                <h5>Ali Zain</h5>
+                <p>Web Developer</p>
+              </div>
+            </div>
+            <div class="review">
+              <div class="stars">
+                <p>&#9733;</p>
+                <p>&#9733;</p>
+                <p>&#9733;</p>
+                <p>&#9733;</p>
+                <p>&#9733;</p>
+              </div>
+              <h4>Lorem, ipsum dolor sit amet consectetur adipisicing</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni
+                praesentium eaque ipsa eveniet nisi voluptatem doloribus alias
+                excepturi. Maiores possimus dolorum animi soluta molestiae sed,
+                incidunt quibusdam at nobis earum. temporibus aperiam
+                perferendis dignissimos deleniti, excepturi ratione enim
+                impedit, modi iusto iure tempora distinctio at deserunt magni.
+                Unde doloribus voluptas illum.
+              </p>
+            </div>
+          </div>
+          <div class="bottom-section">
+            <div class="right-img">
+              <img src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D" alt="" />
+            </div>
+            <div class="left-img">
+              <div class="top">
+                <img src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D" alt="" />
+                <p>Lorem ipsum dolor sit .</p>
+              </div>
+              <button>Explore More</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
