--- a/Front-End/interactive-responsive-project/index.html
+++ b/Front-End/interactive-responsive-project/index.html
@@ -232,11 +232,17 @@
           </div>
           <div class="bottom-section">
             <div class="right-img">
-              <img src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D" alt="" />
+              <img
+                src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D"
+                alt=""
+              />
             </div>
             <div class="left-img">
               <div class="top">
-                <img src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D" alt="" />
+                <img
+                  src="https://images.unsplash.com/photo-1594755260889-29d5fb8e2d1f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bWlsYW58ZW58MHx8MHx8fDA%3D"
+                  alt=""
+                />
                 <p>Lorem ipsum dolor sit .</p>
               </div>
               <button>Explore More</button>
@@ -244,6 +250,54 @@
           </div>
         </div>
       </section>
+
+      <!-- Subscribe -->
+      <div class="subscribe">
+        <div class="subscribe-content">
+          <h2>
+            Get Your Travel Inspiration <br />
+            Straight to Your Inbox
+          </h2>
+          <form>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter your email"
+            />
+            <input type="button" value="Subscribe" id="btn" />
+          </form>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex id ipsum
+            facilis non deleniti quas nam.
+          </p>
+        </div>
+      </div>
     </main>
+
+    <footer>
+      <div class="logo">LOGO</div>
+      <div class="nav">
+        <div class="menu">
+          <p>Home</p>
+          <p>About</p>
+          <p>Contact</p>
+          <p>Blog</p>
+        </div>
+        <div class="menu">
+          <p>Home</p>
+          <p>About</p>
+          <p>Contact</p>
+          <p>Blog</p>
+        </div>
+        <div class="menu">
+          <p>Home</p>
+          <p>About</p>
+          <p>Contact</p>
+          <p>Blog</p>
+        </div>
+      </div>
+    </footer>
+    <p class="copy">&copy;2025 ALI ZAIN ASLAM</p>
   </body>
 </html>
