Create Brand Solutions section

--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -58,6 +58,27 @@
           </div>
         </div>
       </section>
+      <!--  -->
+      <section class="brand-solution">
+        <div class="top-container">
+          <img
+            src="https://images.unsplash.com/photo-1606164510427-0dff1bcb27d2?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8YmxhY2slMjBhbmQlMjB3aGl0ZXxlbnwwfHwwfHx8MA%3D%3D"
+            alt="brand-solution-image"
+          />
+        </div>
+        <div class="bottom-container">
+          <p>WHAT WE DO</p>
+          <div class="text">
+            <h1>Tailored Brand Solu­tions</h1>
+            <p>
+              We believe that every brand has a unique story to tell and our
+              mission is to help you bring that story to life through
+              exceptional branding, marketing, e-commerce, and social media
+              strategies.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
