--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -79,6 +79,61 @@
           </div>
         </div>
       </section>
+      <!--  -->
+      <section class="our-services">
+        <div class="top-container">
+          <h1>OUR <br> SERVICES</h1>
+          <hr />
+          <div class="service-list">
+            <div class="top-item">
+              <div class="item">
+                <h2>Branding</h2>
+                <p>Establish a strong brand identity that sets you apart.</p>
+                <div class="link">
+                  <img src="./assets/arrow.svg" alt="" />
+                  <p>About Branding</p>
+                </div>
+              </div>
+              <hr />
+              <div class="item">
+                <h2>Branding</h2>
+                <p>Establish a strong brand identity that sets you apart.</p>
+                <div class="link">
+                  <img src="./assets/arrow.svg" alt="" />
+                  <p>About Branding</p>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <div class="bottom-item">
+              <div class="item">
+                <h2>Branding</h2>
+                <p>Establish a strong brand identity that sets you apart.</p>
+                <div class="link">
+                  <img src="./assets/arrow.svg" alt="" />
+                  <p>About Branding</p>
+                </div>
+              </div>
+              <hr />
+              <div class="item">
+                <h2>Branding</h2>
+                <p>Establish a strong brand identity that sets you apart.</p>
+                <div class="link">
+                  <img src="./assets/arrow.svg" alt="" />
+                  <p>About Branding</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bottom-container">
+          <img
+            src="https://images.unsplash.com/photo-1535442015126-7f00526ce88a?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fGJsYWNrJTIwYW5kJTIwd2hpdGV8ZW58MHx8MHx8fDA%3D"
+            alt=""
+          />
+        </div>
+      </section>
+      <hr />
     </main>
   </body>
 </html>
