--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -82,7 +82,10 @@
       <!--  -->
       <section class="our-services">
         <div class="top-container">
-          <h1>OUR <br> SERVICES</h1>
+          <h1>
+            OUR <br />
+            SERVICES
+          </h1>
           <hr />
           <div class="service-list">
             <div class="top-item">
@@ -134,6 +137,62 @@
         </div>
       </section>
       <hr />
+      <!--  -->
+      <section class="selected-work">
+        <div class="heading">
+          <img src="./assets/selected-work.svg" alt="">
+        </div>
+        <div class="top-container">
+          <div class="image-1">
+            <img
+              src="https://images.unsplash.com/photo-1567262439850-1d4dc1fefdd0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGJyYW5kaW5nfGVufDB8fDB8fHww"
+              alt=""
+            />
+          </div>
+          <div class="image-2">
+            <img
+              src="https://images.unsplash.com/photo-1612188842101-f976582906fc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzh8fGJyYW5kaW5nfGVufDB8fDB8fHww"
+              alt=""
+            />
+          </div>
+          <div class="text">
+            <h1>Azure</h1>
+            <p>
+              Website Redesign: Improving user experience and modernizing
+              design.
+            </p>
+            <div class="link">
+              <img src="./assets/arrow.svg" alt="" />
+              <p>About Branding</p>
+            </div>
+          </div>
+        </div>
+        <div class="bottom-container">
+          <div class="image-1">
+            <img
+              src="https://images.unsplash.com/photo-1567262439850-1d4dc1fefdd0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGJyYW5kaW5nfGVufDB8fDB8fHww"
+              alt=""
+            />
+          </div>
+          <div class="image-2">
+            <img
+              src="https://images.unsplash.com/photo-1612188842101-f976582906fc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzh8fGJyYW5kaW5nfGVufDB8fDB8fHww"
+              alt=""
+            />
+          </div>
+          <div class="text">
+            <h1>Azure</h1>
+            <p>
+              Website Redesign: Improving user experience and modernizing
+              design.
+            </p>
+            <div class="link">
+              <img src="./assets/arrow.svg" alt="" />
+              <p>About Branding</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
