Create Clients section

--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -140,7 +140,7 @@
       <!--  -->
       <section class="selected-work">
         <div class="heading">
-          <img src="./assets/selected-work.svg" alt="">
+          <img src="./assets/selected-work.svg" alt="" />
         </div>
         <div class="top-container">
           <div class="image-1">
@@ -193,6 +193,65 @@
           </div>
         </div>
       </section>
+      <!--  -->
+      <section class="clients">
+        <div class="top-container"></div>
+        <div class="bottom-container">
+          <div class="heading">
+            <img src="./assets/clients.svg" alt="clients" />
+          </div>
+          <div class="client-list">
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+            <hr />
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+            <hr />
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+            <hr />
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+            <hr />
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+            <hr />
+            <div class="client">
+              <div class="name">
+                <p>2023</p>
+                <h2>Oceania</h2>
+              </div>
+              <p>Branding</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <hr />
     </main>
   </body>
 </html>
