Create Team section

--- a/HTML-CSS/Erikk-template/index.html
+++ b/HTML-CSS/Erikk-template/index.html
@@ -252,6 +252,105 @@
         </div>
       </section>
       <hr />
+      <!--  -->
+      <section class="team">
+        <div class="top-container">
+          <h1>TEAM</h1>
+          <p>
+            We have assembled a team of talented and experienced professionals
+            who are dedicated to helping you achieve your brand's full
+            potential.
+          </p>
+        </div>
+        <div class="bottom-container">
+          <div class="team-member">
+            <h2>John Doe</h2>
+            <div class="profile">
+              <img
+                src="https://images.unsplash.com/photo-1651017810072-3043e05ddbcc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+            </div>
+            <div class="profession">
+              <p>Creative Director</p>
+              <div class="social">
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+
+              </div>
+            </div>
+            <p>
+              Leading our creative vision with strategic insights and innovative
+              ideas.
+            </p>
+          </div>
+          <div class="team-member">
+            <h2>John Doe</h2>
+            <div class="profile">
+              <img
+                src="https://images.unsplash.com/photo-1651017810072-3043e05ddbcc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+            </div>
+            <div class="profession">
+              <p>Creative Director</p>
+              <div class="social">
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+
+              </div>
+            </div>
+            <p>
+              Leading our creative vision with strategic insights and innovative
+              ideas.
+            </p>
+          </div> <div class="team-member">
+            <h2>John Doe</h2>
+            <div class="profile">
+              <img
+                src="https://images.unsplash.com/photo-1651017810072-3043e05ddbcc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+            </div>
+            <div class="profession">
+              <p>Creative Director</p>
+              <div class="social">
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+
+              </div>
+            </div>
+            <p>
+              Leading our creative vision with strategic insights and innovative
+              ideas.
+            </p>
+          </div> <div class="team-member">
+            <h2>John Doe</h2>
+            <div class="profile">
+              <img
+                src="https://images.unsplash.com/photo-1651017810072-3043e05ddbcc?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt=""
+              />
+            </div>
+            <div class="profession">
+              <p>Creative Director</p>
+              <div class="social">
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+                <img src="./assets/insta.svg" alt="" />
+
+              </div>
+            </div>
+            <p>
+              Leading our creative vision with strategic insights and innovative
+              ideas.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
